# PAMAE-RAG

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: 2wikimultihopqa.yaml  hotpotqa.yaml  musique.yaml  popqa.yaml  smoke.yaml
data/: README.md
docs/: experiment_protocol.md  method_v1.md
scripts/: analyze_dq_failure_cases.py  analyze_failure_taxonomy.py  analyze_qa_stage_bottlenecks.py  analyze_query_graph.py  analyze_relevance_alignment.py  analyze_representative_taxonomy.py  audit_embedding_space.py  build_semantic_effect_decomposition_outputs.py  build_semantic_embedding_rerun_outputs.py  build_support_tree_order_outputs.py  check_gold_universe.py  compare_answer_carrier_runs.py  compare_b2_robustness.py  compare_b2_runtime_profile.py  compare_basin_selection_runs.py  compare_local_surface_runs.py  compare_path_carrier_runs.py  compare_path_realizability_runs.py  compare_qa_runs.py  compare_semantic_carrier_runs.py  compare_semantic_effect_decomposition.py  compare_semantic_embedding_rerun.py  compare_sentence_graph_variants.py  compare_support_tree_order_runs.py  evaluate_retrieval.py  extract_path_realizability_trace.py  generate_compatible_embedding_cache.py  prepare_dataset.py  probe_context_fact_closure.py  run_ablation_grid.py  run_answer_carrier_2wiki_smoke.sh  run_answer_carrier_variant.py  run_b2_robustness_2wiki.sh  run_b2_robustness_hotpot.sh  run_b2_robustness_secondary.sh  run_b2_runtime_profile_2wiki.sh  run_b2_runtime_profile_hotpot.sh  run_b2_runtime_profile_variant.py  (+31 more)
(+1125 files in other folders)
