[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pamae-rag"
version = "0.1.0"
description = "PAMAE-consistent anchor retrieval core for multi-hop GraphRAG"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "PAMAE-RAG Research"}]
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.1,<3",
  "PyYAML>=6.0.1,<7",
  "tqdm>=4.66,<5",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9", "ruff>=0.5,<1", "mypy>=1.8,<2"]

[project.scripts]
pamae-rag = "pamae_rag.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "scripts"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
